Add {{> loginButtons}} to demonstrate that Blaze plays well with React.

--- a/examples/leaderboard/leaderboard.html
+++ b/examples/leaderboard/leaderboard.html
@@ -3,5 +3,9 @@
 </head>
 
 <body>
-  <div id="outer"></div>
+  <div id="outer">
+    {{> loginButtons}}
+    <br><br><br>
+    <div id="inner"></div>
+  </div>
 </body>
